@@ -17,7 +17,7 @@
     </properties>
 
     <dependencies>
-        <!-- Lombok (latest) -->
+    
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -109,7 +109,6 @@
 
     <build>
         <plugins>
-            <!-- Compiler Plugin with --add-exports for Java 17 + Lombok -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -126,7 +125,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire for TestNG -->
+          
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
